--- a/INSTALL
+++ b/INSTALL
@@ -7,4 +7,4 @@ chmod a+x /opt/want/want
 ln -s /opt/want/want /usr/bin/want
 echo "#!/bin/sh
 rm -R /usr/bin/want /opt/want" >> /opt/want/remove/want
-sudo chown -R /opt/want
+sudo chown -R $USER /opt/want
