--- a/INSTALL
+++ b/INSTALL
@@ -7,4 +7,5 @@ chmod a+x /opt/want/want
 ln -s /opt/want/want /usr/bin/want
 echo "#!/bin/sh
 rm -R /usr/bin/want /opt/want" >> /opt/want/remove/want
+chmod a+x /opt/want/remove/want
 sudo chown -R $USER /opt/want
