--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-mkdir /opt/want /opt/want/install /opt/want/remove
+mkdir /opt/want /opt/want/programs /opt/want/remove
 cd /opt/want
 wget https://raw.githubusercontent.com/ivan-hc/want/main/opt/want/want
 chmod a+x /opt/want/want
