--- a/INSTALL
+++ b/INSTALL
@@ -6,5 +6,7 @@ wget https://raw.githubusercontent.com/ivan-hc/want/main/opt/want/want
 chmod a+x /opt/want/want
 ln -s /opt/want/want /usr/bin/want
 echo "#!/bin/sh
-rm -R /usr/bin/want /opt/want" >> /opt/want/remove/want
+rm -R /usr/bin/want /opt/want/want" >> /opt/want/remove/want
 chmod a+x /opt/want/remove/want
+currentuser=$(who | awk '{print $1}')
+chown -R $currentuser /opt/want
