--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,12 @@
 #!/bin/sh
 
-mkdir /opt/want /opt/want/programs /opt/want/remove
+mkdir /opt/want /opt/eya/programs /opt/eya/remove
 cd /opt/want
-wget https://raw.githubusercontent.com/ivan-hc/want/main/want
-chmod a+x /opt/want/want
+wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
+chmod a+x /opt/eya/eya
 ln -s /opt/want/want /usr/bin/want
 echo "#!/bin/sh
-rm -R /usr/bin/want /opt/want/want" >> /opt/want/remove/want
-chmod a+x /opt/want/remove/want
+rm -R /usr/bin/eya /opt/eya/eya" >> /opt/eya/remove/eya
+chmod a+x /opt/eya/remove/eya
 currentuser=$(who | awk '{print $1}')
-chown -R $currentuser /opt/want
+chown -R $currentuser /opt/eya
