--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 #!/bin/sh
 
-mkdir /opt/want /opt/eya/programs /opt/eya/remove
-cd /opt/want
+mkdir /opt/eya /opt/eya/programs /opt/eya/remove
+cd /opt/eya
 wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
 chmod a+x /opt/eya/eya
 ln -s /opt/want/want /usr/bin/want
