--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,7 @@ mkdir /opt/eya /opt/eya/programs /opt/eya/remove
 cd /opt/eya
 wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
 chmod a+x /opt/eya/eya
-ln -s /opt/want/want /usr/bin/want
+ln -s /opt/eya/eya /usr/bin/eya
 echo "#!/bin/sh
 rm -R /usr/bin/eya /opt/eya/eya" >> /opt/eya/remove/eya
 chmod a+x /opt/eya/remove/eya
