--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-mkdir /opt/eya /opt/eya/programs /opt/eya/remove
+mkdir /opt/eya /opt/eya/installed /opt/eya/remove
 cd /opt/eya
 wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
 chmod a+x /opt/eya/eya
