--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,13 @@
 #!/bin/sh
 
-mkdir /opt/eya /opt/eya/installed /opt/eya/remove
+mkdir /opt/eya /opt/eya/programs
 cd /opt/eya
 wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
 chmod a+x /opt/eya/eya
 ln -s /opt/eya/eya /usr/bin/eya
+rm /opt/eya/remove-eya
 echo "#!/bin/sh
-rm -R /usr/bin/eya /opt/eya/eya" >> /opt/eya/remove/eya
-chmod a+x /opt/eya/remove/eya
+rm -R /usr/bin/eya /opt/eya/eya" >> /opt/eya/remove-eya
+chmod a+x /opt/eya/remove-eya
 currentuser=$(who | awk '{print $1}')
 chown -R $currentuser /opt/eya
