--- a/INSTALL
+++ b/INSTALL
@@ -1,13 +1,13 @@
 #!/bin/sh
 
-mkdir /opt/eya /opt/eya/programs
-cd /opt/eya
-wget https://raw.githubusercontent.com/ivan-hc/EYA-App-Manager/main/eya
-chmod a+x /opt/eya/eya
-ln -s /opt/eya/eya /usr/bin/eya
-rm /opt/eya/remove-eya
+mkdir /opt/app /opt/app/programs
+cd /opt/app
+wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/app
+chmod a+x /opt/app/app
+ln -s /opt/app/app /usr/bin/app
+rm /opt/app/remove-app
 echo "#!/bin/sh
-rm -R /usr/bin/eya /opt/eya/eya" >> /opt/eya/remove-eya
-chmod a+x /opt/eya/remove-eya
+rm -R /usr/bin/app /opt/app/app" >> /opt/app/remove-app
+chmod a+x /opt/app/remove-app
 currentuser=$(who | awk '{print $1}')
-chown -R $currentuser /opt/eya
+chown -R $currentuser /opt/app
