--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ cd /opt/app
 wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/app
 chmod a+x /opt/app/app
 ln -s /opt/app/app /usr/bin/app
-rm /opt/app/remove-app
+rm /opt/app/remove
 echo "#!/bin/sh
 rm -R /usr/bin/app /opt/app/app" >> /opt/app/remove
 chmod a+x /opt/app/remove
