--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ chmod a+x /opt/app/app
 ln -s /opt/app/app /usr/bin/app
 rm /opt/app/remove
 echo "#!/bin/sh
-rm -R /usr/bin/app /opt/app/app" >> /opt/app/remove
+rm -R /usr/bin/app /opt/app" >> /opt/app/remove
 chmod a+x /opt/app/remove
 currentuser=$(who | awk '{print $1}')
 chown -R $currentuser /opt/app
