--- a/INSTALL
+++ b/INSTALL
@@ -2,9 +2,9 @@
 
 mkdir /opt/app /opt/app/programs
 cd /opt/app
-wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/app
-chmod a+x /opt/app/app
-ln -s /opt/app/app /usr/bin/app
+wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/APP-COMMAND
+chmod a+x /opt/app/APP-COMMAND
+ln -s /opt/app/APP-COMMAND /usr/bin/app
 rm /opt/app/remove
 echo "#!/bin/sh
 rm -R /usr/bin/app /opt/app" >> /opt/app/remove
