--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-mkdir /opt/app /opt/app/programs
+mkdir /opt/app /opt/app/.cache
 cd /opt/app
 wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/APP-COMMAND
 chmod a+x /opt/app/APP-COMMAND
