--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ cd /opt/app
 wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/APP-COMMAND
 chmod a+x /opt/app/APP-COMMAND
 ln -s /opt/app/APP-COMMAND /usr/bin/app
-rm /opt/app/remove
+rm -R -f /opt/app/remove
 echo "#!/bin/sh
 rm -R -f /usr/bin/app /opt/app" >> /opt/app/remove
 chmod a+x /opt/app/remove
