--- a/INSTALL
+++ b/INSTALL
@@ -11,3 +11,29 @@ rm -R -f /usr/bin/app /opt/app" >> /opt/app/remove
 chmod a+x /opt/app/remove
 currentuser=$(who | awk '{print $1}')
 chown -R $currentuser /opt/app
+echo '
+ ------------------------------------------------------------------------
+                                                             
+                AAA               PPPPPPPPPPPPPPPPP   PPPPPPPPPPPPPPPPP   
+               A:::A              P::::::::::::::::P  P::::::::::::::::P  
+              A:::::A             P::::::PPPPPP:::::P P::::::PPPPPP:::::P 
+             A:::::::A            PP:::::P     P:::::PPP:::::P     P:::::P
+            A:::::::::A             P::::P     P:::::P  P::::P     P:::::P
+           A:::::A:::::A            P::::P     P:::::P  P::::P     P:::::P
+          A:::::A A:::::A           P::::PPPPPP:::::P   P::::PPPPPP:::::P 
+         A:::::A   A:::::A          P:::::::::::::PP    P:::::::::::::PP  
+        A:::::A     A:::::A         P::::PPPPPPPPP      P::::PPPPPPPPP    
+       A:::::AAAAAAAAA:::::A        P::::P              P::::P            
+      A:::::::::::::::::::::A       P::::P              P::::P            
+     A:::::AAAAAAAAAAAAA:::::A      P::::P              P::::P            
+    A:::::A             A:::::A   PP::::::PP          PP::::::PP          
+   A:::::A               A:::::A  P::::::::P          P::::::::P          
+  A:::::A                 A:::::A P::::::::P          P::::::::P          
+ AAAAAAA                   AAAAAAAPPPPPPPPPP          PPPPPPPPPP          
+
+ ▄▀█ █▀█ █▀█ █░░ █ █▀▀ ▄▀█ ▀█▀ █ █▀█ █▄░█   █▀▄▀█ ▄▀█ █▄░█ ▄▀█ █▀▀ █▀▀ █▀█
+ █▀█ █▀▀ █▀▀ █▄▄ █ █▄▄ █▀█ ░█░ █ █▄█ █░▀█   █░▀░█ █▀█ █░▀█ █▀█ █▄█ ██▄ █▀▄
+
+   >>  Enjoy your applications without thinking about anything else   <<   
+  
+  -----------------------------------------------------------------------'
