--- a/INSTALL
+++ b/INSTALL
@@ -1,38 +1,53 @@
 #!/bin/sh
 
-mkdir /opt/app /opt/app/.cache
-cd /opt/app
-wget https://raw.githubusercontent.com/ivan-hc/APP-Manager/main/APP-COMMAND
-chmod a+x /opt/app/APP-COMMAND
-ln -s /opt/app/APP-COMMAND /usr/bin/app
-rm -R -f /opt/app/remove
+
+mkdir /opt/am /opt/am/.cache
+
+
+cd /opt/am
+wget https://raw.githubusercontent.com/ivan-hc/APPLICATION-MANAGER/main/APP-MANAGER
+chmod a+x /opt/am/APP-MANAGER
+
+
+ln -s /opt/am/APP-MANAGER /usr/local/bin/am
+rm -R -f /opt/am/remove
+
 echo "#!/bin/sh
-rm -R -f /usr/bin/app /opt/app" >> /opt/app/remove
-chmod a+x /opt/app/remove
+rm -R -f /usr/local/bin/am /opt/am" >> /opt/am/remove
+chmod a+x /opt/am/remove
 currentuser=$(who | awk '{print $1}')
-chown -R $currentuser /opt/app
+chown -R $currentuser /opt/am
 echo '
  ------------------------------------------------------------------------
-                                                             
-                AAA               PPPPPPPPPPPPPPPPP   PPPPPPPPPPPPPPPPP   
-               A:::A              P::::::::::::::::P  P::::::::::::::::P  
-              A:::::A             P::::::PPPPPP:::::P P::::::PPPPPP:::::P 
-             A:::::::A            PP:::::P     P:::::PPP:::::P     P:::::P
-            A:::::::::A             P::::P     P:::::P  P::::P     P:::::P
-           A:::::A:::::A            P::::P     P:::::P  P::::P     P:::::P
-          A:::::A A:::::A           P::::PPPPPP:::::P   P::::PPPPPP:::::P 
-         A:::::A   A:::::A          P:::::::::::::PP    P:::::::::::::PP  
-        A:::::A     A:::::A         P::::PPPPPPPPP      P::::PPPPPPPPP    
-       A:::::AAAAAAAAA:::::A        P::::P              P::::P            
-      A:::::::::::::::::::::A       P::::P              P::::P            
-     A:::::AAAAAAAAAAAAA:::::A      P::::P              P::::P            
-    A:::::A             A:::::A   PP::::::PP          PP::::::PP          
-   A:::::A               A:::::A  P::::::::P          P::::::::P          
-  A:::::A                 A:::::A P::::::::P          P::::::::P          
- AAAAAAA                   AAAAAAAPPPPPPPPPP          PPPPPPPPPP          
+                    _____                    _____                                                                           
+                   /\    \                  /\    \         
+                  /::\    \                /::\____\        
+                 /::::\    \              /::::|   |        
+                /::::::\    \            /:::::|   |        
+               /:::/\:::\    \          /::::::|   |        
+              /:::/__\:::\    \        /:::/|::|   |        
+             /::::\   \:::\    \      /:::/ |::|   |        
+            /::::::\   \:::\    \    /:::/  |::|___|______  
+           /:::/\:::\   \:::\    \  /:::/   |::::::::\    \ 
+          /:::/  \:::\   \:::\____\/:::/    |:::::::::\____\
+          \::/    \:::\  /:::/    /\::/    / ~~~~~/:::/    /
+           \/____/ \:::\/:::/    /  \/____/      /:::/    / 
+                    \::::::/    /               /:::/    /  
+                     \::::/    /               /:::/    /   
+                     /:::/    /               /:::/    /    
+                    /:::/    /               /:::/    /     
+                   /:::/    /               /:::/    /      
+                  /:::/    /               /:::/    /       
+                  \::/    /                \::/    /        
+                   \/____/                  \/____/         
+
 
  ▄▀█ █▀█ █▀█ █░░ █ █▀▀ ▄▀█ ▀█▀ █ █▀█ █▄░█   █▀▄▀█ ▄▀█ █▄░█ ▄▀█ █▀▀ █▀▀ █▀█
  █▀█ █▀▀ █▀▀ █▄▄ █ █▄▄ █▀█ ░█░ █ █▄█ █░▀█   █░▀░█ █▀█ █░▀█ █▀█ █▄█ ██▄ █▀▄
+
+                             by Ivan Alex HC
+
+ ------------------------------------------------------------------------
 
    >>  Enjoy your applications without thinking about anything else   <<   
   
