--- a/programs/x86_64/olive-0.1
+++ b/programs/x86_64/olive-0.1
@@ -42,7 +42,7 @@ StartupNotify=true
 X-AppImage-Version=1e3cf53" >> /usr/share/applications/$APP.desktop
 
 # ICON
-wget https://raw.githubusercontent.com/ivan-hc/AppMan/main/applications/$APP/$APP.svg
+wget https://raw.githubusercontent.com/ivan-hc/AM-application-manager/main/programs/.icons/$APP.svg
 
 # CHANGE THE PERMISSIONS
 currentuser=$(who | awk '{print $1}')
