--- a/programs/x86_64/vlc-3.0.3
+++ b/programs/x86_64/vlc-3.0.3
@@ -128,7 +128,7 @@ X-KDE-Protocols=ftp,http,https,mms,rtmp,rtsp,sftp,smb
 Keywords=Player;Capture;DVD;Audio;Video;Server;Broadcast;" >> /usr/share/applications/$APP.desktop
 
 # ICON
-wget https://raw.githubusercontent.com/ivan-hc/AppMan/main/applications/vlc/vlc.svg
+wget https://raw.githubusercontent.com/ivan-hc/AM-application-manager/main/programs/.icons/vlc.svg
 
 # CHANGE THE PERMISSIONS
 currentuser=$(who | awk '{print $1}')
