--- a/INSTALL
+++ b/INSTALL
@@ -25,7 +25,7 @@ currentuser=$(who | awk '{print $1}')
 chown -R $currentuser /opt/am
 
 # ADD THE BASH COMPLETION SCRIPT
-echo '#!/usr/bin/env bash' >> /opt/am/am-completion.sh; echo 'complete -W "$(cat /opt/am/list)" am' >> /opt/am/am-completion.sh
+echo '#!/usr/bin/env bash' >> /opt/am/am-completion.sh; echo 'complete -W "$(cat /opt/am/list 2>/dev/null)" am' >> /opt/am/am-completion.sh
 chmod a+x /opt/am/am-completion.sh
 rm -R -f /opt/am/remove; echo '#!/bin/sh' >> /opt/am/remove
 echo 'rm -R -f /usr/local/bin/am /opt/am /etc/bash_completion.d/am-completion.sh' >> /opt/am/remove
